update not security

--- a/finish_project/src/main/resources/templates/guest/common/header.html
+++ b/finish_project/src/main/resources/templates/guest/common/header.html
@@ -11,7 +11,7 @@
     <title>PHPJabbers.com | Free Mobile Store Website Template</title>
 
     <!-- Bootstrap core CSS -->
-    <link th:href="@{/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+    <link th:href="@{/admin/css/bootstrap.min.css}" rel="stylesheet">
 
     <!-- Additional CSS Files -->
     <link rel="stylesheet" th:href="@{/assets/css/fontawesome.css}">
