--- a/finish_project/src/main/resources/templates/guest/common/header.html
+++ b/finish_project/src/main/resources/templates/guest/common/header.html
@@ -14,7 +14,7 @@
     <link th:href="@{/admin_static/css/bootstrap.min.css}" rel="stylesheet">
 
     <!-- Additional CSS Files -->
-    <link rel="stylesheet" th:href="@{/assets/css/fontawesome.css}">
+    <link rel="stylesheet" th:href="@{/assets/css/font-awesome.min.css}">
     <link rel="stylesheet" th:href="@{/assets/css/style.css}">
     <link rel="stylesheet" th:href="@{/assets/css/owl.css}">
 
