--- a/finish_project/src/main/resources/templates/guest/login.html
+++ b/finish_project/src/main/resources/templates/guest/login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head th:include="/user-admin/common/head::head"></head>
 
@@ -12,8 +13,8 @@
                 <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
                     <div class="bg-light rounded p-4 p-sm-5 my-4 mx-3">
                         <div class="d-flex align-items-center justify-content-between mb-3">
-                            <a href="index.html" class="">
-                                <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>DASHMIN</h3>
+                            <a th:href="@{/home}" class="">
+                                <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>Mobile Store</h3>
                             </a>
                             <h3>Sign In</h3>
                         </div>
