--- a/finish_project/src/main/resources/templates/user-admin/product-manager/product-info.html
+++ b/finish_project/src/main/resources/templates/user-admin/product-manager/product-info.html
@@ -80,7 +80,7 @@
                             <div class="mb-3">
                                 <label for="avatar" class="form-label">Avatar</label>
                                 <input type="text" name="avatarUrl" class="form-control" id="avatar"
-                                       th:field="*{avatarUrl}">
+                                       th:field="*{avatar}">
                             </div>
                             <div class="mb-3">
                                 <label for="image" class="form-label">Image</label>
