--- a/finish_project/src/main/resources/templates/guest/productById-list.html
+++ b/finish_project/src/main/resources/templates/guest/productById-list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
 <head th:include="/guest/common/header::head"></head>
 
@@ -24,7 +25,7 @@
 
           <div class="col-6 col-sm-3" th:each="product : ${products}" >
             <div class="service-item">
-              <img style="width: 300px; height: 400px"  th:src="'data:image/png;base64,'+${product.avatarUrl}" alt="">
+              <img style="width: 300px; height: 400px"  th:src="'data:image/png;base64,'+${product.avatar}" alt="">
               <div class="down-content">
 
                 <div class="row">
