--- a/finish_project/src/main/resources/templates/user-admin/user-manager/user-info.html
+++ b/finish_project/src/main/resources/templates/user-admin/user-manager/user-info.html
@@ -1,35 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-
-<head>
-    <meta charset="utf-8">
-    <title>DASHMIN - Bootstrap Admin Template</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="" name="keywords">
-    <meta content="" name="description">
-
-    <!-- Favicon -->
-    <link th:href="@{img/favicon.ico}" rel="icon">
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600;700&display=swap" rel="stylesheet">
-
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link th:href="@{/admin_static/lib/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
-    <link th:href="@{/admin_static/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet" />
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link th:href="@{/admin_static/css/bootstrap.min.css}" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link th:href="@{/admin_static/css/style.css}" rel="stylesheet">
-</head>
+<head th:include="/user-admin/common/head::head"></head>
 
 <body>
 <div class="container-xxl position-relative bg-white d-flex p-0">
@@ -49,7 +20,7 @@
                         <h6 class="mb-4">Basic Form</h6>
                         <form
                                 id="formSubmit"
-                                th:action="@{admin_static}"
+                                th:action="@{admin/user/user-info}"
                                 th:object="${user}"
                                 role="form"
                                 method="post">
@@ -92,9 +63,9 @@
 
                             </div>
                             <div class="mb-3">
-                                <label for="roleNames" class="form-label">roleNames</label>
+                                <label for="roleNames" class="form-label">roleName</label>
                                 <input type="text" name="roleNames" class="form-control" id="roleNames"
-                                       th:field="*{roleNames}">
+                                       th:field="*{roleName}">
 
                             </div>
 
@@ -106,43 +77,10 @@
         </div>
         <!-- Form End -->
 
-
-        <!-- Footer Start -->
-        <div class="container-fluid pt-4 px-4">
-            <div class="bg-light rounded-top p-4">
-                <div class="row">
-                    <div class="col-12 col-sm-6 text-center text-sm-start">
-                        &copy; <a href="#">Your Site Name</a>, All Right Reserved.
-                    </div>
-                    <div class="col-12 col-sm-6 text-center text-sm-end">
-                        <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                        Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Footer End -->
     </div>
-    <!-- Content End -->
-
-
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 </div>
 
-<!-- JavaScript Libraries -->
-<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
-<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-<script th:src="@{admin_static}"></script>
-<script th:src="@{admin_static}"></script>
-<script th:src="@{admin_static}"></script>
-<script th:src="@{admin_static}"></script>
-<script th:src="@{/admmin/lib/tempusdominus/js/moment.min.js}"></script>
-<script th:src="@{admin_static}"></script>
-<script th:src="@{admin_static}"></script>
-
-<!-- Template Javascript -->
-<script th:src="@{admin_static}"></script>
+<footer th:include="/user-admin/common/footer::footer"></footer>
 </body>
 <script>
     $('#btnAddOrUpdateUser').click(function (e) {
@@ -169,7 +107,7 @@
             dataType: 'json',
             success: function (result) {
                 console.log(result);
-                window.location.href = "../../static/admin_static/user";
+                window.location.href = "/admin/user";
             },
             error: function (error) {
                 console.log(error);
@@ -186,7 +124,7 @@
             dataType: 'json',
             success: function (result) {
                 console.log(result);
-                window.location.href = "../../static/admin_static/user";
+                window.location.href = "/admin/user";
             },
             error: function (error) {
                 console.log(error);
