--- a/finish_project/src/main/resources/templates/guest/cart.html
+++ b/finish_project/src/main/resources/templates/guest/cart.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head th:include="/guest/common/header::head">
+<head th:include="/guest/common/header">
 </head>
 
 
 <body>
-<header th:include="/guest/common/navigation::header">
+<header th:include="/guest/common/navigation">
 </header>
 
     <!-- Page Content -->
-    <div class="page-heading header-text">
+    <div class="page-heading header-text" id="top">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -121,6 +121,6 @@
     </div>
 </section>
 
-<footer th:include="/guest/common/footer::footer"></footer>
+<footer th:include="/guest/common/footer"></footer>
   </body>
 </html>
