--- a/finish_project/src/main/resources/templates/guest/home.html
+++ b/finish_project/src/main/resources/templates/guest/home.html
@@ -2,11 +2,11 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-<head th:include="/guest/common/header::head"></head>
+<head th:include="/guest/common/header"></head>
 
 
   <body>
-  <header th:include="/guest/common/navigation::header"></header>
+  <header th:include="/guest/common/navigation"></header>
 
 
   <!-- Header End -->
@@ -305,7 +305,7 @@
         <br>
       </div>
     </div>
-  <footer th:include="/guest/common/footer::footer"></footer>
+  <footer th:include="/guest/common/footer"></footer>
 
 
 
