--- a/finish_project/src/main/resources/templates/guest/login.html
+++ b/finish_project/src/main/resources/templates/guest/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-<head th:include="/user-admin/common/head::head"></head>
+<head th:include="/user-admin/common/head"></head>
 
 <body>
     <div class="container-xxl position-relative bg-white d-flex p-0">
@@ -43,7 +43,7 @@
         <!-- Sign In End -->
     </div>
 
-    <footer th:include="/user-admin/common/footer::footer"></footer>
+    <footer th:include="/user-admin/common/footer"></footer>
 </body>
 
 </html>
