--- a/finish_project/src/main/resources/templates/guest/register.html
+++ b/finish_project/src/main/resources/templates/guest/register.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 
-<head th:include="/user-admin/common/head::head"></head>
+<head th:include="/user-admin/common/head"></head>
 
 <body>
     <div class="container-xxl position-relative bg-white d-flex p-0">
@@ -63,7 +63,7 @@
         </div>
         <!-- Sign Up End -->
     </div>
-        <footer th:include="/user-admin/common/footer::footer"></footer>
+        <footer th:include="/user-admin/common/footer"></footer>
 </body>
 <script>
     $('#btnRegister').click(function (e) {
@@ -73,7 +73,7 @@
         $.each(formData, function (i, v) {
             data[""+v.name+""] = v.value;
         });
-        data['roleNames']=["user"];
+        data['roleName']=["User"];
         register(data);
     });
 
