--- a/finish_project/src/main/resources/templates/user-admin/common/head.html
+++ b/finish_project/src/main/resources/templates/user-admin/common/head.html
@@ -6,7 +6,7 @@
   <meta content="" name="description">
 
   <!-- Favicon -->
-  <link th:href="@{img/favicon.ico}" rel="icon">
+  <link th:href="@{/img/favicon.ico}" rel="icon">
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
