--- a/finish_project/src/main/resources/templates/user-admin/common/sidebar.html
+++ b/finish_project/src/main/resources/templates/user-admin/common/sidebar.html
@@ -16,8 +16,8 @@
       </div>
     </div>
     <div  class="navbar-nav w-100">
-      <a th:href="@{/product}" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Product Management</a>
-      <a th:href="@{/category}" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Category Management</a>
+      <a th:href="@{/admin/product}" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Product Management</a>
+      <a th:href="@{/admin/category}" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Category Management</a>
       <a th:href="@{/admin/user}" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>User Management</a>
       <a th:href="@{/admin/role}" class="nav-item nav-link"><i class="fa fa-keyboard me-2"></i>Role Management</a>
 
