--- a/finish_project/src/main/resources/templates/user-admin/product-manager/product-list.html
+++ b/finish_project/src/main/resources/templates/user-admin/product-manager/product-list.html
@@ -19,7 +19,7 @@
         <div class="container-fluid pt-4 px-4">
             <div class="bg-light text-center rounded p-4">
                 <div class="d-flex align-items-center justify-content-between mb-4">
-                    <a class="btn btn-sm btn-primary" th:href="@{/product/product-info}">Add new product</a>
+                    <a class="btn btn-sm btn-primary" th:href="@{/admin/product/product-info}">Add new product</a>
                 </div>
                 <div class="table-responsive">
                     <table class="table text-start align-middle table-bordered table-hover mb-0">
@@ -48,8 +48,8 @@
                             <td th:text="${product.description}"></td>
                             <td th:text="${product.oldPrice}"></td>
                             <td th:text="${product.price}"></td>
-                            <td><a class="btn btn-sm btn-primary" th:href="@{/product/product-info/{id}(id=${product.getId()})}">Detail</a></td>
-                            <td><button th:onclick="'deleteProduct(' + ${product.getId()} + ')'" class="btn btn-sm btn-primary" th:href="@{/product/}">Delete</button></td>
+                            <td><a class="btn btn-sm btn-primary" th:href="@{/admin/product/product-info/{id}(id=${product.getId()})}">Detail</a></td>
+                            <td><button th:onclick="'deleteProduct(' + ${product.getId()} + ')'" class="btn btn-sm btn-primary" >Delete</button></td>
 
                         </tr>
 
@@ -81,7 +81,7 @@
             contentType: 'application/json',
             success: function (result) {
                 console.log(result);
-                window.location.href = "/product";
+                window.location.href = "/admin/product";
             },
             error: function (error) {
                 console.log(error);
