--- a/finish_project/src/main/resources/templates/user-admin/common/footer.html
+++ b/finish_project/src/main/resources/templates/user-admin/common/footer.html
@@ -1,19 +1,5 @@
 
 <footer>
-  <!-- Footer Start -->
-  <div class="container-fluid pt-4 px-4">
-    <div class="bg-light rounded-top p-4">
-      <div class="row">
-        <div class="col-12 col-sm-6 text-center text-sm-end">
-          <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-          Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-          </br>
-          Distributed By <a class="border-bottom" href="https://themewagon.com" target="_blank">ThemeWagon</a>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- Footer End -->
 
   <!-- JavaScript Libraries -->
   <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
@@ -22,11 +8,11 @@
   <!-- JavaScript Libraries -->
   <script th:src="@{/admin_static/lib/chart/chart.min.js}"></script>
   <script th:src="@{/admin_static/lib/easing/easing.min.js}"></script>
-  <script th:src="@{/admin_static/lib/waypoints/waypoints.min.js}"</script>
+  <script th:src="@{/admin_static/lib/waypoints/waypoints.min.js}"></script>
   <script th:src="@{/admin_static/lib/owlcarousel/owl.carousel.min.js}"></script>
-  <script th:src="@{/admin_static/lib/tempusdominus/js/moment.min.js}"</script>
-  <script th:src="@{/admin_static/lib/tempusdominus/js/moment-timezone.min.js}"</script>
-  <script th:src="@{/admin_static/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"</script>
+  <script th:src="@{/admin_static/lib/tempusdominus/js/moment.min.js}"></script>
+  <script th:src="@{/admin_static/lib/tempusdominus/js/moment-timezone.min.js}"></script>
+  <script th:src="@{/admin_static/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
 
   <!-- Template Javascript -->
   <script th:src="@{/admin_static/js/main.js}"></script>
