--- a/finish_project/src/main/resources/templates/user-admin/common/sidebar.html
+++ b/finish_project/src/main/resources/templates/user-admin/common/sidebar.html
@@ -1,8 +1,8 @@
 <!-- Sidebar Start -->
 <div style="width: 300px" class="sidebar pe-4 pb-3">
   <nav class="navbar bg-light navbar-light">
-    <a href="index.html" class="navbar-brand mx-4 mb-3">
-      <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>Phone Store</h3>
+    <a class="navbar-brand mx-4 mb-3">
+      <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>Mobile Store</h3>
     </a>
     <br>
     <div class="d-flex align-items-center ms-4 mb-4">
@@ -12,7 +12,7 @@
       </div>
       <div class="ms-3">
         <h6 class="mb-0" th:text = "${name}"></h6>
-        <span th:text = "${role}">Admin</span>
+        <span th:text = "${role}"></span>
       </div>
     </div>
     <div  class="navbar-nav w-100">
